--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,5 +1,9 @@
 .header-container {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 112px;
+  height: 80px;
 }
 
 .logo-img {
@@ -8,12 +12,32 @@
 
 .logo-container {
   display: flex;
+  align-items: flex-end;
+  gap: 12px;
 }
 
 .nav-desktop__links {
   display: flex;
+  gap: 50px;
+}
+
+.nav-desktop__link a {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
+}
+
+.contact-link {
+  color: $primary;
 }
 
 .hamburger-icon {
   display: none;
+}
+
+.logo-text {
+  color: $primary;
+  &-span {
+    font-style: italic;
+  }
 }
