--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,8 @@ a {
   color: inherit;
 }
 
-img {
+img,
+i {
   width: 100%;
   height: 100%;
 }
@@ -36,6 +37,16 @@ ul {
   padding: 30px 112px;
   height: 80px;
 }
+@media (min-width: 768px) and (max-width: 1200px) {
+  .header-container {
+    padding: 30px 32px;
+  }
+}
+@media (max-width: 767px) {
+  .header-container {
+    padding: 30px 15px;
+  }
+}
 
 .logo-img {
   width: 38px;
@@ -46,16 +57,31 @@ ul {
   align-items: flex-end;
   gap: 12px;
 }
+@media (max-width: 767px) {
+  .logo-container {
+    gap: 8px;
+  }
+}
+@media (min-width: 1441px) {
+  .logo-container {
+    align-items: center;
+  }
+}
 
 .nav-desktop__links {
   display: flex;
-  gap: 50px;
+  justify-content: space-between;
 }
 
 .nav-desktop__link a {
   font-weight: 400;
   font-size: 18px;
   line-height: 21px;
+}
+@media (min-width: 1441px) {
+  .nav-desktop__link a {
+    font-size: 28px;
+  }
 }
 
 .contact-link {
@@ -64,13 +90,36 @@ ul {
 
 .hamburger-icon {
   display: none;
+  font-size: 32px;
+  padding-top: 3px;
+}
+@media (max-width: 767px) {
+  .hamburger-icon {
+    display: block;
+  }
 }
 
 .logo-text {
   color: #eb0165;
+  letter-spacing: 0;
 }
 .logo-text-span {
   font-style: italic;
+}
+@media (min-width: 1441px) {
+  .logo-text {
+    font-size: 3rem;
+  }
+}
+
+.nav-desktop {
+  width: 60%;
+  padding-top: 10px;
+}
+@media (max-width: 767px) {
+  .nav-desktop {
+    display: none;
+  }
 }
 
 .hero-container {
