--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -33,6 +33,8 @@ ul {
 $primary: #eb0165;
 $blue: #0165eb;
 $green: #65eb01;
+$white: #fff;
+$black: #000;
 $mobile-max: 767px;
 $tablet-mini: 768px;
 $tablet-max: 1200px;
