--- a/styles/style.css
+++ b/styles/style.css
@@ -77,11 +77,19 @@ ul {
   font-weight: 400;
   font-size: 18px;
   line-height: 21px;
+  padding: 5px 10px;
+  border-radius: 15px;
+  transition: all 0.2s ease-in-out;
 }
 @media (min-width: 1441px) {
   .nav-desktop__link a {
     font-size: 28px;
   }
+}
+.nav-desktop__link a:hover {
+  opacity: 0.65;
+  background-color: #eb0165;
+  color: #fff;
 }
 
 .contact-link {
