--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -2,7 +2,6 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "Work Sans", sans-serif;
 }
 
 a,
@@ -35,6 +34,7 @@ $blue: #0165eb;
 $green: #65eb01;
 $white: #fff;
 $black: #000;
+$gray: #3c3b3b;
 $mobile-max: 767px;
 $tablet-mini: 768px;
 $tablet-max: 1200px;
