--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -37,7 +37,7 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 21px;
-  padding: 5px 10px;
+  padding: 5px;
   border-radius: 15px;
   transition: all 0.2s ease-in-out;
   @media (min-width: $big-desktop-mini) {
