--- a/styles/_hero.scss
+++ b/styles/_hero.scss
@@ -3,13 +3,93 @@
 }
 
 .hero-slider-panel {
-  position: absolute;
-  bottom: 0;
-  right: 0;
 }
 
 .hero-text {
+  color: $white;
+  font-weight: 600;
+  font-size: 44px;
+  font-family: "Caveat", cursive;
+}
+
+.hero-text-box {
+  display: flex;
+  align-items: center;
   position: absolute;
-  top: 0;
+  bottom: 4px;
   left: 0;
+  width: 50%;
+  height: 130px;
+  padding-left: 32px;
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 30px;
+  background-color: $gray;
+}
+
+.hero-slider-panel {
+  position: absolute;
+  bottom: 4px;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 50%;
+  height: 130px;
+  background-color: #eb0165;
+  border-radius: 30px;
+  color: $white;
+  font-family: "Caveat", cursive;
+  padding-top: 10px;
+  &__heading {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 28px;
+  }
+  &__location {
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 23px;
+  }
+}
+
+.hero-slider-panel__navigation {
+  display: flex;
+  width: 100%;
+}
+
+.hero-slider-panel__back-box,
+.hero-slider-panel__next-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  background-color: $gray;
+  width: 50%;
+  height: 40px;
+  transition: all 0.2s ease-in-out;
+  &:first-child {
+    border-right: 2px solid $white;
+    border-bottom-left-radius: 30px;
+  }
+  &:last-child {
+    border-bottom-right-radius: 30px;
+  }
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.hero-slider-panel__navigation-text,
+.arrow-icon {
+  font-weight: 400;
+  font-size: 26px;
+}
+
+.hero-slider-panel__navigation-text {
+  padding-bottom: 7px;
+  &:hover {
+    opacity: 0.9;
+    font-size: 27px;
+  }
 }
