--- a/styles/_hero.scss
+++ b/styles/_hero.scss
@@ -48,7 +48,7 @@
 
 .hero-slider-panel {
   position: absolute;
-  bottom: 4px;
+  bottom: 0;
   right: 0;
   display: flex;
   flex-direction: column;
