--- a/styles/_hero.scss
+++ b/styles/_hero.scss
@@ -34,8 +34,7 @@
   width: 50%;
   height: 130px;
   padding: 0 10px;
-  border-top-right-radius: 30px;
-  border-bottom-right-radius: 30px;
+  border-radius: 30px;
   background-color: $gray;
   @media (min-width: $big-desktop-mini) {
     height: 170px;
