--- a/styles/style.css
+++ b/styles/style.css
@@ -327,6 +327,98 @@ ul {
   display: none;
 }
 
+.reputation-container {
+  display: flex;
+  flex-direction: column;
+  padding: 60px 200px;
+  gap: 50px;
+  align-items: center;
+}
+@media (max-width: 1000px) {
+  .reputation-container {
+    padding: 60px 0;
+  }
+}
+
+.reputation-heading {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 42px;
+  color: #292e3d;
+}
+@media (min-width: 1441px) {
+  .reputation-heading {
+    font-size: 3rem;
+  }
+}
+
+.reputation-advantages-box {
+  display: flex;
+  gap: 66px;
+}
+@media (min-width: 768px) and (max-width: 1200px) {
+  .reputation-advantages-box {
+    gap: 33px;
+  }
+}
+@media (max-width: 1000px) {
+  .reputation-advantages-box {
+    flex-direction: column;
+  }
+}
+
+.reputation-adventage-box {
+  display: flex;
+  flex-direction: column;
+  width: 292px;
+  height: 197px;
+  border: 1.4px solid #e0e3eb;
+  border-radius: 4px;
+  gap: 18px;
+  padding: 20px 20px 40px;
+}
+.reputation-adventage-box i {
+  font-size: 26px;
+  color: #eb0165;
+}
+@media (min-width: 1441px) {
+  .reputation-adventage-box i {
+    font-size: 50px;
+  }
+}
+@media (min-width: 1441px) {
+  .reputation-adventage-box {
+    width: 470px;
+    height: 270px;
+    gap: 36px;
+  }
+}
+
+.reputation-adventage__heading {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  color: #292e3d;
+}
+@media (min-width: 1441px) {
+  .reputation-adventage__heading {
+    font-size: 27px;
+  }
+}
+
+.reputation-adventage__description {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #858ead;
+}
+@media (min-width: 1441px) {
+  .reputation-adventage__description {
+    font-size: 21px;
+    line-height: 23px;
+  }
+}
+
 body {
   font-family: "Work Sans", sans-serif;
 }/*# sourceMappingURL=style.css.map */
