--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,7 +1,7 @@
 @import "_global.scss";
 @import "_header.scss";
 @import "_hero.scss";
-
+@import "_reputation.scss";
 body {
   font-family: "Work Sans", sans-serif;
 }
