--- a/styles/style.css
+++ b/styles/style.css
@@ -419,6 +419,57 @@ ul {
   }
 }
 
+.about-container {
+  display: flex;
+  padding: 74px 0 202px 231px;
+  position: relative;
+}
+
+.about-img {
+  width: 902px;
+  height: 669px;
+}
+
+.about-us-box {
+  display: flex;
+  flex-direction: column;
+  width: 594px;
+  height: 523px;
+  background-color: #eb0165;
+  color: #fff;
+  position: absolute;
+  bottom: 276px;
+  right: 231px;
+  gap: 30px;
+  padding: 50px 60px 60px 60px;
+}
+
+.about-us__heading {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 42px;
+}
+
+.about-us__paragraph {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 23px;
+}
+
+.more-history-btn {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 21px;
+  background-color: #fff;
+  color: #000;
+  width: 219px;
+  height: 53px;
+  border-radius: 6px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 body {
   font-family: "Work Sans", sans-serif;
 }/*# sourceMappingURL=style.css.map */
