--- a/styles/style.scss
+++ b/styles/style.scss
@@ -2,6 +2,7 @@
 @import "_header.scss";
 @import "_hero.scss";
 @import "_reputation.scss";
+@import "_about.scss";
 body {
   font-family: "Work Sans", sans-serif;
 }
